# Spy-Story1

./: .env  .gitignore  .replit  CHANGELOG.md  README.md  __init__.py  add_user_id_column.sql  admin_config.py  app.py  clean_character_data.py  config.py  database.py  database_schema.md  debug_db.py  debug_test.py  fix_fk_temp.py  fix_role_column.py  install_pgadmin.py  list_columns.py  llms.txt  main.py  models.py  pyproject.toml  requirements.txt  reset_story_node.py  reset_story_node.sql  routes.py  run_migration.py  run_pgadmin.py  setup_db.py  show_db_info.py  test_api_logging.py  test_connection.py  test_reroll.py  test_story_output.json  wsgi.py
api/: game_api.py  unity_routes.py
attached_assets/: CYOA Yorkie.txt  Pasted--Character-highlighting-in-story-text-document-addEventListener-DOMContentLoaded-function--1741991197979.txt  Pasted--details-Traceback-most-recent-call-last-n-File-home-runner-workspace-pythonlibs-lib-1741924433380.txt  Pasted-2025-03-24-17-00-02-37-c8872acb-User-raise-exc-from-None-2025-03-24-17-00-02-37-c8872acb-User--1742850041686.txt  Pasted-2025-03-24-17-09-06-16-8b49779b-User-2025-03-24-17-09-06-16--1742850690928.txt  Pasted-2025-03-24-17-32-39-47-6b2d43ba-User-response-connection-handle-request-2025-03-24-17-32-39-4-1742852079098.txt  Pasted-88-in-expect-n-insp-post-inspect-n-File-home-runner-workspace-pythonlibs-lib-python3-11-si-1741924463546.txt  Pasted-8884-b2a20ef10299b2c5-js-1-Replit-version-b0f98197-pid2-version-0-0-1080-app-16b818bf6d4cfdc4-js--1741886559773.txt  content-1741817724443.md  debug.js  deprecated_main.js  (+16 more)
(+217 files in other folders)
